Assignment- part1.ipynb

--- a/assignment- part1.ipynb
+++ b/assignment- part1.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adm = pd.read_csv(r'C:\\Users\\Om\\OneDrive\\Documents\\Labs\\MLEL\\Admission Chance.csv')"
+    "adm = pd.read_csv(r'C:\\Users\\Rishi\\OneDrive\\Documents\\Labs\\MLEL\\Admission Chance.csv')"
    ]
   },
   {
