--- a/assignment- part2.ipynb
+++ b/assignment- part2.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adl_inc = pd.read_csv(r\"C:\\Users\\Om\\OneDrive\\Documents\\Labs\\MLEL\\AdultIncome.csv\")"
+    "adl_inc = pd.read_csv(r\"C:\\Users\\Rishi\\OneDrive\\Documents\\Labs\\MLEL\\AdultIncome.csv\")"
    ]
   },
   {
