--- a/lecture 1A.ipynb
+++ b/lecture 1A.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bdata = pd.read_csv(r\"C:\\Users\\Om\\OneDrive\\Documents\\Labs\\MLEL\\books.csv\")"
+    "bdata = pd.read_csv(r\"C:\\Users\\Rishi\\OneDrive\\Documents\\Labs\\MLEL\\books.csv\")"
    ]
   },
   {
